--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="p5.gui/libraries/quicksettings.js" type="text/javascript"></script>
     <script src="p5.gui/libraries/p5.gui.js" type="text/javascript"></script>
     <script src="addScreenPositionFunction.js"></script>
-    <script src="../grafica.js/lib/grafica.min.js"></script>
+    <script src="grafica.min.js"></script>
     <script src="sketch.js"></script>
 
   </head>
